# safe-fetch

./: .gitignore  Makefile  README.md  pyproject.toml
openspec/changes/archive/2026-05-11-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-content-boundary-markers/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-11-html-sanitize-before-extract/: design.md  proposal.md  (+1 more)
openspec/specs/adversarial-security-testing/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/code-block-aware-scan/: spec.md
openspec/specs/content-boundary-markers/: spec.md
openspec/specs/fetch-pipeline/: spec.md
openspec/specs/fetch-resource-controls/: spec.md
openspec/specs/html-sanitize/: spec.md
openspec/specs/network-boundary-hardening/: spec.md
openspec/specs/provenance-risk-metadata/: spec.md
openspec/specs/request-guard/: spec.md
openspec/specs/response-guard/: spec.md
openspec/specs/safe-fetch-api/: spec.md
openspec/specs/safe-markdown-output/: spec.md
openspec/specs/unicode-normalization/: spec.md
safe_fetch/: __init__.py  _cli.py  _exceptions.py  _extractor.py  _fetch_pipeline.py  _marker.py  _redaction.py  _request_guard.py  _response_guard.py  _safe_markdown.py  _transport.py  _types.py  _url.py
tests/: test_api_compat.py  test_cli.py  test_extractor.py  test_fetch_pipeline.py  test_integration.py  test_marker.py  test_request_guard.py  test_response_guard.py  test_safe_markdown.py  test_sanitize.py  test_transport.py  test_url.py
tests/security/: test_prompt_markdown_hidden_corpus.py  test_ssrf_corpus.py
(+38 files in other folders)
