[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safe-fetch"
version = "1.0.0"
description = "Secure async web fetching for AI agents — pre-request secret/PII scanning and post-fetch injection detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "detect-secrets>=1.5",
    "trafilatura>=1.9",
    "readability-lxml>=0.8",
    "markdownify>=0.13",
]

[project.scripts]
safe-fetch = "safe_fetch._cli:main"

[project.optional-dependencies]
playwright = [
    "playwright>=1.44",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
]
